--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "4.0.2",
     "react-youtube": "^7.13.1",
     "typescript": "^4.1.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "youtube-api-search": "^0.0.5"
   },
   "scripts": {
     "reinstall": "/bin/rm -rf node_modules yarn.lock package.lock && yarn install",
