--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "Joy Lazari <joy.lazari@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@giphy/js-fetch-api": "^3.0.0",
+    "@giphy/react-components": "^2.4.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
