--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
     "react-scripts": "4.0.2",
+    "react-select": "^4.3.0",
     "react-youtube": "^7.13.1",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0",
