--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Joy Lazari <joy.lazari@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@emotion/styled": "^11.3.0",
     "@giphy/js-fetch-api": "^3.0.0",
     "@giphy/react-components": "^2.4.0",
     "@testing-library/jest-dom": "^5.11.9",
@@ -17,6 +18,7 @@
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "@types/react-select": "^4.0.15",
     "@types/youtube-player": "^5.5.3",
     "antd": "^4.12.2",
     "craco-less": "^1.17.1",
