--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/youtube-player": "^5.5.3",
     "antd": "^4.12.2",
     "craco-less": "^1.17.1",
+    "feather-icons-react": "^0.4.3",
     "momentjs": "^2.0.0",
     "react": "^17.0.1",
     "react-countdown": "^2.3.1",
